--- a/app/components/mensajes/Mensajes.module.css
+++ b/app/components/mensajes/Mensajes.module.css
@@ -1,1 +1,25 @@
+.container {
+  background-color: green;
+  height:80%;
+  display: flex;
+  flex-direction: column-reverse;
+  
+}
 
+.messageFromMe {
+  align-self: flex-end;
+  background-color: red;
+  max-width: 50%;
+  margin: 5px;
+  border-radius: 5px;
+  padding: 8px;
+}
+
+.messageFromOthers{
+  align-self: flex-start;
+  background-color: blue;
+  max-width: 50%;
+  margin: 5px;
+  border-radius: 5px;
+  padding: 8px;
+}
