--- a/app/register/page.module.css
+++ b/app/register/page.module.css
@@ -1,74 +1,113 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500&display=swap');
 .container {
   display: flex;
   height: 100vh;
-  justify-content: center;
-  align-items: center;
+  font-family: "Ubuntu";
 }
-
-.form {
-  border: 1px solid red;
-  padding: 25px;
-  border-radius: 5px;
-  width: 400px;
-  height: 480px;
+.left {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #0D3B66;
+  color: #FAF0CA;
+}
+.bienvenido {
+  font-size: 40px;
+  margin-bottom: 40px;
+}
+.texto {
+  font-size: 20px;
+  margin-bottom: 30px;
+}
+.buttonleft {
+  margin: 10px;
+  width: 150px;
+  height: 40px;
+  border: 1px solid #FAF0CA;
+  background-color: #0D3B66;
+  border-radius: 25px;
+  color: #FAF0CA;
+  font-family: "Ubuntu";
+  font-size: 15px;
+}
+.buttonleft:hover {
+  cursor: pointer;
+}
+.buttonleft:active {
+  background-color: #FAF0CA;
+  color: #0D3B66;
+}
+.formContainer {
+  background-color: #FAF0CA;
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .titulo {
-  margin-bottom: 15px;
+  margin-bottom: 25px;
   text-align: center;
+  font-size: 40px;
+  color: #0D3B66;
 }
+
 .data {
   display: flex;
   flex-direction: column;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
 }
-.buttonContainer {
-  margin-bottom: 10px;
-  justify-content: center;
+.span{
+  text-align: center;
+  margin: 5px;
+  color: #0D3B66;
 }
-.link{
-  margin-left: 10px;
+.input{
+  width: 300px;
+  height: 30px;
+  border: 1px solid #0D3B66;
+  border-radius: 15px;
 }
-.link:hover {
-  color: red;
+.button {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #0D3B66;
+  color: #FAF0CA;
+  width: 150px;
+  height: 40px;
+  border-radius: 25px;
+  border: none;
+  font-family: "Ubuntu";
+  font-size: 15px;
+}
+.button:hover {
+  cursor: pointer;
+}
+.button:active {
+  background-color: #FAF0CA;
+  color: #0D3B66;
+  border: 1px solid #0D3B66;
+}
+.error{
+  text-align: center;
+  color: #0D3B66;
+  font-size: 15px;
 }
 
-.error{
-  color: red;
-  font-size: 13px;
+.customFileInput {
+  display: inline-block;
+  padding: 6px 12px;
+  cursor: pointer;
+  background-color: #0D3B66;
+  color: #FAF0CA;
+  border: 1px solid #0D3B66;
+  border-radius: 15px;
+  width: 300px;
+  height: 30px;
+  text-align: center;
+  line-height: 15px; /* Vertically center the text */
 }
-.spinner {
-    width: 56px;
-    height: 56px;
-    display: grid;
-    border: 4.5px solid #0000;
-    border-radius: 50%;
-    border-color: #dbdcef #0000;
-    animation: spinner-e04l1k 1s infinite linear;
-  }
-  
-  .spinner::before,
-  .spinner::after {
-    content: "";
-    grid-area: 1/1;
-    margin: 2.2px;
-    border: inherit;
-    border-radius: 50%;
-  }
-  
-  .spinner::before {
-    border-color: #474bff #0000;
-    animation: inherit;
-    animation-duration: 0.5s;
-    animation-direction: reverse;
-  }
-  
-  .spinner::after {
-    margin: 8.9px;
-  }
-  
-  @keyframes spinner-e04l1k {
-    100% {
-      transform: rotate(1turn);
-    }
-  }
