--- a/app/components/card/Card.module.css
+++ b/app/components/card/Card.module.css
@@ -2,12 +2,15 @@
     display: flex;
     align-items: center;
     margin-bottom: 10px;
+    background-color: #FAF0CA;
+    border-radius: 10px;
   }
   
   .card img {
     width: 50px; /* Ajusta el tamaño de la imagen según tus necesidades */
     height: 50px; /* Ajusta el tamaño de la imagen según tus necesidades */
     margin-right: 10px;
+    border-radius: 50%;
   }
   
   .card .details {
@@ -20,10 +23,11 @@
   .card .details h2 {
     margin: 0;
     font-size: 16px;
+    color: #0D3B66;
   }
   
   .card .details p {
-    margin: 0;
+    margin: 5px;
     font-size: 12px;
-    color: #666; /* Puedes ajustar el color según tu diseño */
+    color: #666; 
   }
