--- a/app/components/contactos/Contactos.module.css
+++ b/app/components/contactos/Contactos.module.css
@@ -1,3 +1,8 @@
+.tab {
+    text-align: center;
+    margin-bottom: 10px;
+    color: #0D3B66;
+}
 .sidebar {
     width: 20%;
     float: left;
@@ -10,10 +15,18 @@
 }
 
 .buttonContainer {
-    margin: 5px;
+    margin-top: 5px;
+    display: flex;
+    justify-content: space-evenly;
 }
 
 .button {
     margin: 5px;
+    height: 24px;
     width:100px;
+    border-radius: 15px;
+    border: none;
+    background-color: #FAF0CA;
+    color: #0D3B66;
+    cursor: pointer;
 }
