--- a/app/components/input/Input.module.css
+++ b/app/components/input/Input.module.css
@@ -1,4 +1,6 @@
 .container {
+    display: flex;
+    justify-content: space-evenly;
     position: fixed;
     bottom: 0;
     right: 0;
@@ -7,11 +9,17 @@
 }
 .input {
     width: 75%;
-    margin-right: 40px;
+    margin: 0 20px;
     height: 25px;
+    border-radius: 10px;
+    border: 1px solid black;
 }
 .button {
-    width: 100px;
-    height: 25px;
-    border-radius: 5px;
+    width: 110px;
+    height: 28px;
+    border-radius: 10px;
+    background-color: #FAF0CA;
+    border: 2px solid #F4D35E;
+    color: #0D3B66;
+
 }
